# Theo

./: .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
beispiele/: erste_texte.md
beispiele/akten/: arbeitsvertrag.txt  datenschutz_hinweis.md  mietvertrag.txt
daten/: korpus.txt
src/theo/: __init__.py  cli.py
src/theo/knowledge/: __init__.py
src/theo/knowledge/data/: 01_grundlagen.md  02_punkte_scoring.md  03_positionen_offense.md  04_positionen_defense.md  05_special_teams.md  06_spielzuege_konzepte.md  07_regeln_strafen.md  08_glossar.md  09_nfl.md  10_college_football.md  11_coaches.md  12_deutschland_europa.md  13_schiedsrichter.md  14_statistik.md  15_geschichte_ausruestung.md  16_legenden_spieler.md  17_trophaeen_awards.md
src/theo/qa/: __init__.py  engine.py  llm.py  retriever.py
src/theo/simulation/: __init__.py  advisor.py  engine.py  model.py  plays.py
src/theo/video/: __init__.py  analyzer.py  annotate.py  detection.py  formations.py  pipeline.py  tracking.py
src/theo/web/: __init__.py  app.py
tests/: test_akte.py  test_annotate.py  test_formations.py  test_knowledge.py  test_pipeline.py  test_qa.py  test_radar.py  test_simulation.py  test_tag.py  test_theo.py  test_tracking.py  test_video.py  test_web.py
theo/: __init__.py  cli.py  corpus.py  data.py  generate.py  model.py  train.py
theo/akte/: __init__.py  cli.py  dokumente.py  suche.py
theo/radar/: __init__.py  cli.py  plot.py  signal.py  szenario.py  tracking.py  verarbeitung.py
theo/tag/: __init__.py  cli.py  erinnerung.py  gewohnheiten.py  modell.py  planer.py
