[project]
name = "theo"
version = "0.1.0"
description = "Theo – eine KI rund um American Football: Fragen beantworten und Spiel-/Trainingsvideos analysieren."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Theo" }]
dependencies = []

# Optionale Extras – nur installieren, was gebraucht wird.
[project.optional-dependencies]
# RAG-Antworten über die Claude API (Nutzer stellt ANTHROPIC_API_KEY bereit).
llm = ["anthropic>=0.40"]
# Video-Analyse: Computer Vision (Basis – Detektion via OpenCV-HOG).
video = ["opencv-python-headless>=4.9", "numpy>=1.24"]
# Genauere Detektion (Spieler + Ball) via Ultralytics YOLO (zieht PyTorch).
video-yolo = ["theo[video]", "ultralytics>=8.1"]
# Web-Oberfläche (Q&A + Video-Upload).
web = ["theo[video]", "fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9"]
# Entwicklung / Tests.
dev = ["pytest>=8.0", "httpx>=0.27"]
all = ["theo[llm,video,web,dev]"]

[project.scripts]
theo = "theo.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"theo.knowledge" = ["data/*.md"]
"theo.web" = ["static/*", "static/icons/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
